<resources>
    <string name="app_name">Uib Events</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="content_authority">no.nilsnh.uibevents</string>
    <string name="list_item_category_textview">exhibition</string>
    <string name="list_item_date_from_textview">18.11.15</string>
    <string name="list_item_date_to_textview">20.11.15</string>
    <string name="list_item_title_textview">The Norwegian Constitution \"VI: 1814 - 2014\"</string>
    <string name="sync_account_type">uibevents.nilsnh.no</string>
    <string name="list_item_details_textview">Studentteateret immaturus inviterer til jubileumsforestillingen \\\"Alice i Eventyrland\\\", med premiere 11. April.</string>
    <string name="title_activity_detail">UiB event details</string>
    <string name="event_url_button">Åpne event i nettleser</string>
</resources>
